--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -12,6 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
+    <TextView
+        android:id="@+id/txtNoTelp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
     <EditText
         android:id="@+id/edt_usia"
@@ -28,4 +33,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"/>
+
+
 </LinearLayout>
